<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_movie"
            android:layout_width="fill_parent"
            android:layout_height="400dp"
            android:contentDescription="@string/movieImageView"
            android:src="@drawable/placeholder_image" />

        <LinearLayout style="@style/details_linear_layout">

            <TextView
                android:id="@+id/title_heading"
                style="@style/text_view_heading"
                android:text="@string/title" />

            <TextView
                android:id="@+id/title"
                style="@style/text_view"
                android:hint="@string/title" />
        </LinearLayout>

        <LinearLayout style="@style/details_linear_layout">

            <TextView
                android:id="@+id/vote_average_heading"
                style="@style/text_view_heading"
                android:text="@string/vote_average" />

            <TextView
                android:id="@+id/vote_average"
                style="@style/text_view"
                android:hint="@string/vote_average" />
        </LinearLayout>


        <LinearLayout style="@style/details_linear_layout">

            <TextView
                android:id="@+id/release_date_heading"
                style="@style/text_view_heading"
                android:text="@string/release_date" />


            <TextView
                android:id="@+id/release_date"
                style="@style/text_view"
                android:hint="@string/release_date" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/overview_heading"
                style="@style/text_view_heading"
                android:text="@string/overview" />

            <TextView
                android:id="@+id/overview"
                style="@style/text_view"
                android:hint="@string/overview"
                android:paddingRight="16dp" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>